--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <p>Real-time detection using Python & OpenCV.</p>
           </div>
           <div class="project-card">
-            <h3>Emotion Detection</h3>
-            <p>CNN-based facial emotion classifier.</p>
+            <h3>Weather Prediction</h3>
+            <p>Predicting Next 5 Days Weather.</p>
           </div>
           <div class="project-card">
             <h3>Portfolio Website</h3>
